--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,7 +63,7 @@
 		<!-- Start Main Content -->	
 		<div id="main-content">
 			<h3>What We Do</h3>
-			<p>STB Financial Services is one of the most trusted financial service providers in Central India. With diversified business in Financial Services such as Stock Broking Services, Share Market Advisory Services, Mutual Funds, Life Insurance Services up to the Education Services such as coaching for CS, CPT (CA Entrance), ICWA, BCA, BBA, BCCA, HSSC, B.Com, MBA etc., we have emerged as the global leader in these two major verticals.</p>
+			<p><strong>STB Financial Services</strong> is one of the most trusted financial service providers in Central India. With diversified business in Financial Services such as Stock Broking Services, Share Market Advisory Services, Mutual Funds, Life Insurance Services up to the Education Services such as coaching for CS, CPT (CA Entrance), ICWA, BCA, BBA, BCCA, HSSC, B.Com, MBA etc., we have emerged as the global leader in these two major verticals.</p>
 			 <a href="/pages/about" class="arrow-link">Learn More</a>
 			<div class="section">				
 				<div class="three-col">
@@ -71,16 +71,16 @@
 						<img class="large-icon ie6fix" alt="" src="images/checked-paper.png" />
 						<h3>Financial Services</h3>
 					</div>
-					<p class="no-pad">Lorem ipsum dolor sit amet, adipiscing elit. Nullam dignissim convallis est. Quisque aliquam. Donec faucibus. Nunc iaculis suscipit dui. Nam sit amet sem. Aliquam libero nisi, imperdiet at, tincidunt nec, gravida vehicula.</p>
-					<a href="#" class="arrow-link">Learn More</a>		
+					<p class="no-pad">We are the pioneers in Financial Services. Our wide array of Expert Financial Services will get your cash registers ringing. The proven methodologies and benchmarks coupled with our rich experience in Finance will provide you the step by step insight into how to take the calculative decisions and see your wealth grow!</p>
+					<a href="/pages/finance" class="arrow-link">Learn More</a>		
 				</div>
 				<div class="three-col">
 					<div class="highlight-box">
 						<img class="large-icon ie6fix" alt="" src="images/web.png" />
 						<h3>Commerce Coaching Classes</h3>
 					</div>
-					<p class="no-pad">Donec commodo euismod rutrum. Proin rhoncus eros a sapien tempor vestibulum. Sed egestas posuere risus quis sodales. Nulla et sapien at tortor condimentum euismod ac in velit. Integer suscipit lorem id nunc gravida congue. Aliquam libero nisi, imperdiet at, tincidunt nec.</p>
-					<a href="#" class="arrow-link">Learn More</a>		
+					<p class="no-pad">We offer classes for courses conducted by Institute of Chartered Accountants of India (ICAI), Institute of Cost and Works Accountant of India (ICWAI), Institute of Cost and Management Accountants of India and also for Institute of Company Secretaries Accountants of India.</p>
+					<a href="/pages/education" class="arrow-link">Learn More</a>		
 				</div>			
 				<div class="ruler"></div>
 				<div class="three-col">
