--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -25,13 +25,13 @@
 				<ul class="arrow-list">
 					<li>
 						<%= link_to stip.title , tip_path(stip) %>
-						<p><em><%= truncate(stip.description, :length => 70).html_safe %></em></p>
 					</li>
 														
 				</ul>
 				
 				<% end %>
-				
+				<p>&nbsp;</p>
+				<p><a href="/tips" class="arrow-link">View all</a></p>
 				</div>
 			</div>
 			<div class="widget">
