--- a/app/views/tips/index.html.erb
+++ b/app/views/tips/index.html.erb
@@ -43,7 +43,8 @@
 				</ul>
 				
 				<% end %>
-				
+				<p>&nbsp;</p>
+				<p><a href="/tips" class="arrow-link">View all</a></p>
 				</div>
 			</div>
 			
