--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -109,18 +109,19 @@
 				<div class="widget-top round-top"></div>
 				<h3>Recent Stock Market Tips</h3>				
 				<div class="widget-content">
-				<% tips = Tip.find(:all, :order => 'id desc', :limit => 4) %>
+				<% tips = Tip.find(:all, :order => 'id desc', :limit => 5) %>
 				<% tips.each do |stip| %>
 				<ul class="arrow-list">
 					<li>
 						<%= link_to stip.title , tip_path(stip) %>
-						<p><em><%= truncate(stip.description, :length => 70).html_safe %></em></p>
+						
 					</li>
 														
 				</ul>
 				
 				<% end %>
-				
+				<p>&nbsp;</p>
+				<p><a href="/tips" class="arrow-link">View all</a></p>
 				</div>
 			</div>
 			<div class="widget">
