--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -42,7 +42,8 @@
 				</ul>
 				
 				<% end %>
-				
+				<p>&nbsp;</p>
+				<p><a href="/tips" class="arrow-link">View all</a></p>
 				</div>
 			</div>
 			
