--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -27,6 +27,7 @@
 				<li><% if controller.controller_name == 'pages' %> <%= link_to "Pages", admin_pages_path, :class=>"active" %> <% else %> <%= link_to "Pages", admin_pages_path %> <% end %></li>
 				<li><% if controller.controller_name == 'tips' %> <%= link_to "Tips", admin_tips_path, :class=>"active" %> <% else %> <%= link_to "Tips", admin_tips_path %> <% end %></li>
 				<li><% if controller.controller_name == 'notifications' %> <%= link_to "Notifications", admin_notifications_path, :class=>"active" %> <% else %> <%= link_to "Notifications", admin_notifications_path %> <% end %></li>
+				<li><% if controller.controller_name == 'skills' %> <%= link_to "Skill", admin_skills_path, :class=>"active" %> <% else %> <%= link_to "Skill", admin_skills_path %> <% end %></li>
 				  <li><% if controller.controller_name == 'banners' %> <%= link_to "Left Side Banner", admin_banners_path, :class=>"active" %> <% else %> <%= link_to "Left Side Banner", admin_banners_path %> <% end %></li>
 				<li><% if controller.controller_name == 'contacts' %> <%= link_to "Contacts", admin_contacts_path, :class=>"active" %> <% else %> <%= link_to "Contacts", admin_contacts_path %> <% end %></li>
 				
