--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 			</script>
 		<![endif]--> 
 		
-		<%= javascript_include_tag 'jquery-1.5.2.min.js', 'jquery.easing.1.2.js','jquery.anythingslider.js' %>
+		<%= javascript_include_tag 'jquery-1.5.2.min.js', 'jquery.easing.1.2.js','jquery.anythingslider.js', 'jquery.validate.min', 'application' %>
 		
 		 		
 		
