--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -19,7 +19,7 @@
 			<div class="widget">
 				<div class="widget-top round-top"></div>
 				<% if @page.id == 11 %>
-				  <h3>Test your skills</h3>				
+				  <h3><blink>Test your skills</blink></h3>				
   				<div class="widget-content">
   				<% skills = Skill.find(:all, :order => 'id asc') %>
   				<% skills.each do |skill| %>
