--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -53,7 +53,7 @@
 			<div class="widget">
 				<div class="widget-top round-top"></div>
 				
-				  <h3>Test your skills</h3>				
+				  <h3><blink>Test your skills</blink></h3>				
   				<div class="widget-content">
   				<% skills = Skill.find(:all) %>
   				<% skills.each do |skill| %>
@@ -66,7 +66,7 @@
 
   				<% end %>
   				<p>&nbsp;</p>
-  				<p><a href="/tips" class="arrow-link">View all</a></p>
+  				
   				</div>
 			</div>
 			<div class="widget">
