--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -10,12 +10,10 @@
 			<p>Aenean tincidunt pharetra leo. Curabitur euismod sollicitudin elit. Donec faucibus lacus nec sapien. Aliquam ipsum nisi, scelerisque et, commo. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Cupidatat rollover sunt in anim id est.</p>
 			<div class="fl mar-right">
 				<h3>Address</h3>
-				<p>Kunal Infotech Pvt Ltd.<br />55, Suyog Nagar, Ring Road
-				
-				<br />Nagpur</p>
+				<p>STB FINANCIAL SERVICES.<br />Nagpur, India</p>
 			</div>
 			<h3>Contact Info.</h3>
-			<p><strong>Telephone:</strong>+91 712 3010539 <br /><strong>Email:</strong> info@kunalinfotech.net</p>
+			<p><strong>Telephone:</strong>+91 712 3010539 <br /><strong>Email:</strong> info@stbgroup.in </p>
 			
 		</div>		
 		<div class="two-col end-col">
