text changes in home page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
 						</div>
 						<div class="slide-content fr">
 							<h2>Stock Broking Services</h2>
-							<p>Our vision is to offer various Financial Services and Products in such a way that it leads to optimum gains for the entities involved in these transactions.</p>
+							<p>Our vision is to arrange to offer various Financial Services and Products in such a way that it leads to optimum gains for the entities involved in these transactions.</p>
 							
 							<a href="/pages/finance" class="small-secondary-btn">Learn More</a>	
 						</div>
@@ -21,7 +21,7 @@
 						</div>
 						<div class="slide-content fl">
 							<h2>Share Market Advisory Services</h2>
-							<p>We offer the best Share Market Advisory Services to help our clients to gain the momentum in stock broking and see their investments growing very fast. Our vision is to provide a host of real time, financial advisory services to clients trading on the Shares and Commodities and help them achieve their desired goals.</p>
+							<p>We arrange to offer the best Share Market Advisory Services to help our clients to gain the momentum in stock broking and see their investments growing very fast. Our vision is to arrange to provide a host of real time, financial advisory services to clients trading on the Shares and Commodities and help them achieve their desired goals.</p>
 							<a href="/pages/finance" class="small-secondary-btn">Learn More</a>	
 						</div>		   
 					 </li>
