--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -119,7 +119,7 @@
 			</div>
 			<%= content_tag 'div', h(flash[:notice]), :class => 'errorMsg', :id => 'notice' if flash[:notice] %>
 			
-	       	<p class="alert"><%= alert %></p>
+	       	<p class="alert"><%= alert %></p>s
 			
 
 			<%= yield %>
