text editor updated

--- a/app/views/admin/subject_infos/edit.html.erb
+++ b/app/views/admin/subject_infos/edit.html.erb
@@ -15,7 +15,7 @@
 		  
 		
 		    <%= f.label :body %>
-		    <%= f.text_area :body %>
+		    <%= f.cktext_area :body,:height=>400, :width=>900 %>
 		  </p>
 		
 		  
