change slider images

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,7 @@
 				<ul>
 					<li>
 						<div class="slide-feature round-all fl">
-							<img alt="" src="images/advisor.jpg" />
+							<img alt="" src="/images/stock-broking.jpg" />
 						</div>
 						<div class="slide-content fr">
 							<h2>Stock Broking Services</h2>
@@ -17,7 +17,7 @@
 				   	</li>
 				    <li>
 				   		<div class="slide-feature round-all fr">
-							<img alt="" src="images/share-market.jpg" />
+							<img alt="" src="/images/market-advisory.jpg" />
 						</div>
 						<div class="slide-content fl">
 							<h2>Security Market Advisory Services</h2>
@@ -28,7 +28,7 @@
 					 </li>
 				    <li>
 				   		<div class="slide-feature round-all fl">
-							<img alt="" src="images/education.jpg" />
+							<img alt="" src="/images/education-service.jpg" />
 						</div>
 						<div class="slide-content fr">
 							<h2>Educational Services</h2>
@@ -38,7 +38,7 @@
 					 </li>
 				    <li>
 				   		<div class="slide-feature round-all fr">
-							<img alt="" src="images/timetosave.jpg" />
+							<img alt="" src="/images/fees-refund.jpg" />
 						</div>
 						<div class="slide-content fl">
 							<h2>Get your Fees Refund !!!</h2>
