stb contact added

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -9,13 +9,33 @@
 			<div class="main-ruler"></div>						
 			<p>Aenean tincidunt pharetra leo. Curabitur euismod sollicitudin elit. Donec faucibus lacus nec sapien. Aliquam ipsum nisi, scelerisque et, commo. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Cupidatat rollover sunt in anim id est.</p>
 			<div class="fl mar-right">
-				<h3>Address</h3>
-				<p>STB FINANCIAL SERVICES.<br />Nagpur, India</p>
+				<h3>NAGPUR</h3>
+				<p>36. "SAHAYADRI" , Cement Road <br/>
+          Shivaji Nager Nagpur- 440010. <br/>
+          <b>Phone No :</b> 0712-2248246, 2248769,<br/>2248098, 2248044 <br/>
+          <b>Cell No :</b> 9822467820, 9850300746.</p>
 			</div>
-			<h3>Contact Info.</h3>
-			<p><strong>Telephone:</strong>+91 712 3010539 <br /><strong>Email:</strong> info@stbgroup.in </p>
+			<h3>NANDED</h3>
+			<p>Rabhani complex, Tilak Nagar chowk,
+         Bhagya Nagar,<br/> Nanded- 431605.<br/>
+         <b>Cell No :</b> 9822467820,<br/> 9850300746.
+         9850732239, 9921553289. </p>
 			
-		</div>		
+			<div class="fl mar-right">
+			   <h3>PUSAD</h3>
+  				<p>Near rest house washim road, <br/>
+            Pusad. 445204. <br/>
+            <b>Cell No :</b> 9822467820, 9850300746,<br/>9850732239,9921553289 <br/>
+
+  			</div>
+  			<h3>YAVATMAL</h3>
+  			<p>Laxmi vilas complex, Dutta chowk,
+           Yavatmal- 445001.<br/>
+           <b>Cell No :</b> 9822467820, 9850300746.9850732239,
+                                               9921553289 </p>
+		</div>
+		
+		 	
 		<div class="two-col end-col">
 		
 		
