education page updates

--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -11,7 +11,7 @@
 			<div class="fl mar-right">
 				<h3>NAGPUR</h3>
 				<p>36. "SAHAYADRI" , Cement Road <br/>
-          Shivaji Nager Nagpur- 440010. <br/>
+          Shivaji Nagar Nagpur- 440010. <br/>
           <b>Phone No :</b> 0712-2248246, 2248769,<br/>2248098, 2248044 <br/>
           <b>Cell No :</b> 9822467820, 9850300746.</p>
 			</div>
