--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
 					 </li>
 				    <li>
 				   		<div class="slide-feature round-all fl">
-							<img alt="" src="/images/education-service.jpg" />
+							<img alt="" src="/images/education.jpg" />
 						</div>
 						<div class="slide-content fr">
 							<h2>Educational Services</h2>
@@ -69,7 +69,7 @@
 			<div class="section">				
 				<div class="three-col">
 					<div class="highlight-box" style="padding-bottom:21px !important;">
-						<img class="large-icon ie6fix" alt="" src="images/checked-paper.png" />
+						<img class="large-icon ie6fix" alt="" src="/images/checked-paper.png" />
 						<h3>Financial Services</h3>
 					</div>
 					<p class="no-pad">We are the pioneers in Financial Services. Our wide array of Expert Financial Services will get your cash registers ringing. The proven methodologies and benchmarks coupled with our rich experience in Finance will provide you the step by step insight into how to take the calculative decisions and see your wealth grow!</p>
@@ -77,7 +77,7 @@
 				</div>
 				<div class="three-col">
 					<div class="highlight-box">
-						<img class="large-icon ie6fix" alt="" src="images/web.png" />
+						<img class="large-icon ie6fix" alt="" src="/images/web.png" />
 						<h3>Commerce Coaching Classes</h3>
 					</div>
 					<p class="no-pad">We offer classes for courses conducted by Institute of Chartered Accountants of India (ICAI), Institute of Cost and Works Accountant of India (ICWAI), Institute of Cost and Management Accountants of India and also for Institute of Company Secretaries Accountants of India.</p>
