education page update

--- a/app/views/subject_infos/show.html.erb
+++ b/app/views/subject_infos/show.html.erb
@@ -55,7 +55,7 @@
 					  <h3>Get in Touch</h3>
 	  				<div class="widget-content">
 	  					<p>We are highly committed to deliver services with quality and profitability! Get in touch with us to know more ....</p>
-	  					<a href="/contacts" class="arrow-link">Contact Us</a>			
+	  					<a href="/pages/education" class="arrow-link">Contact Us</a>			
 	  				</div>				
 					
 				</div>					
