--- a/app/views/subject_infos/show.html.erb
+++ b/app/views/subject_infos/show.html.erb
@@ -10,7 +10,7 @@
 
 <marquee behavior="scroll" direction="left" onmouseover="this.stop();" onmouseout="this.start();">
  <% @announcements.each do |announcement| %>
-	<div class='marquee_text'><%= announcement.title %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+	<div class='marquee_text_education'><%= announcement.title %>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</div>
  <% end %>
 </marquee>
 
