--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -50,6 +50,7 @@
 				<ul class="arrow-list">
 					<li>
 						<%= link_to stip.title , tip_path(stip) %>
+						<p>added by- 23/05/2012</p>
 					</li>
 														
 				</ul>
