--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1990,7 +1990,7 @@ blockquote p {
 .errorMsg { background: #3F4044; color: #fff; font-size: 14px; font-weight: bold; margin: 0 auto; overflow: hidden; padding: 5px 2px 4px 14px; text-align: center; width: 940px; }
 
 .marquee {margin: 0 auto; overflow: hidden; padding: 5px 2px 4px 14px; text-align: center; width:940px;}
-.marquee_text {color: #4B4B4B !important;font-weight: bold; background: url("../images/skins/blue/arrow.gif") no-repeat scroll 0 6px transparent; font-size: 13px; display: inline-block; padding-left: 8px;}
+.marquee_text {color: #B54D73 !important;font-weight: bold; background: url("../images/skins/blue/arrow.gif") no-repeat scroll 0 6px transparent; font-size: 13px; display: inline-block; padding-left: 8px;}
 
  #body_content h1 {
     color: #EB1313;
