website counter added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -169,12 +169,20 @@
 				<li><a href="/pages/terms-and-conditions">Terms &amp; Conditions</a></li>
 				<li><a href="/pages/disclaimer">Disclaimer</a></li>	 			
 			</ul>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<img src="http://hitwebcounter.com/counter/counter.php?page=4448304&style=0005&nbdigits=5&type=ip&initCount=2" title="free visitors counter" Alt="free visitors counter"   border="0" >
+      
 			<p class="fr">STB Financial Services &copy; 2011. Powered by <a class="high-link" href="http://kunalinfotech.net/" target="_blank">Kunal Infotech Pvt Ltd.</a></p>
 			<div class="clear"></div>
 		</div>	
 	</div>
 </div>
 <!-- End Footer -->
+
+
+
+
+
 
 </body>
 </html>
