--- a/app/views/admin/subject_infos/index.html.erb
+++ b/app/views/admin/subject_infos/index.html.erb
@@ -18,7 +18,7 @@
 			    <td><%= page.title %></td>
 			    
 			    <td style="text-align: center !important;"> <%= link_to "Edit", edit_admin_subject_info_path(page), :class=>'button positive' %> &nbsp;&nbsp; 
-				
+				<a href="/admin/subject_infos/<%= page.id %>/delete" onclick="if(confirm('Are you sure you want to delete this page?'))  return true;  else  return false;" class="button negative" >Delete</a>
 				</td>
 			    
 			  </tr>
